<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resto_name"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/rm_sedap_rasa" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icons8_gmail_50"
            app:tint="#D80032" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icons8_phone_50"
            app:tint="#0174BE" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icons8_location_50"
            app:tint="#79AC78" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi" />

            <TextView
                style="@style/Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/subtitle_desc_resto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_list_menu" />

            <TextView
                style="@style/Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/list_menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_alamat" />

            <TextView
                style="@style/Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/alamat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_jam_buka" />

            <TextView
                style="@style/Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_open" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>